fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@
 }
 
 body {
+    overflow-x: hidden;
     margin: 0;
     font-family: 'Josefin Sans', Arial, sans-serif;
     user-select: none;
